...
        fatalError("init(coder:) has not been implemented")
    }

    // MARK: - Lifecycle
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "User Details"
        setupUI()
        setupConstraints()
        bindState()
        viewModel.loadUserDetails()
    }

...
